# eulers_stag_fourier_transform

./: .python-version  README.md  pyproject.toml
codebase/: main.ipynb  util.py
related_documents/Stag_Model_List/: main.tex
sec/: code_fourier_transform.py  fourier_transform.ipynb  test_run.ipynb  util.py
source_code/: fourier_transform.ipynb
