[project]
name = "eulers_stag_fourier_transform"
version = "2020.02.20"
authors = [
    { name = "Heather Tymms", email = "heather.hymms@googlemail.com" },
    { name = "Jim Collett", email = "jim.collet@herts.ac.uk" },
]

readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.3",
    "pandas>=2.3",
    "scipy>=1.15",
]

[build-system]
requires = ["setuptools>=70.0", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scipy*"]
exclude = ["docs*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["F", "B", "I", "C4", "ANN"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google" # google style docstrings are more succinct

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[project.optional-dependencies]
dev = ["ruff>=0.7", "mypy>=1.10", "jupyterlab>=4.2"]
